<resources>
    <string name="app_name">RGB Sunglasses</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bluetoothscan">BT Scan</string>
    <string name="title_textanimation">Text Anim</string>
    <string name="title_rainbowanimation">Rainbow Anim</string>
    <string name="title_zigzaganimation">ZigZag Anim</string>
    <string name="title_myeyesanimation">MyEyes Anim</string>
    <string name="title_coreconfig">Core Config</string>
    <string name="nav_header_desc">RGB Sunglasses App</string>
    <string name="nav_header_title">RGB Sunglasses 1</string>
    <string name="nav_header_subtitle">RGB Sunglasses 2</string>
</resources>