<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_coreconfig"
        android:icon="@drawable/settings_input_antenna"
        android:title="@string/title_coreconfig" />

    <item
        android:id="@+id/navigation_bluetoothscan"
        android:icon="@drawable/settings_input_antenna"
        android:title="@string/title_bluetoothscan" />

    <item
        android:id="@+id/navigation_textanimation"
        android:icon="@drawable/keyboard"
        android:title="@string/title_textanimation" />

    <item
        android:id="@+id/navigation_rainbowanimation"
        android:icon="@drawable/gradient"
        android:title="@string/title_rainbowanimation" />

    <item
        android:id="@+id/navigation_zigzaganimation"
        android:icon="@drawable/gradient"
        android:title="@string/title_zigzaganimation" />
</menu>