<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.autom8ed.rgbsunglasses.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dev.autom8ed.rgbsunglasses.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.autom8ed.rgbsunglasses.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_bluetoothscan"
        android:name="dev.autom8ed.rgbsunglasses.ui.bluetooth.BluetoothScanFragment"
        android:label="@string/title_bluetoothscan"
        tools:layout="@layout/fragment_bluetoothscan" />

    <fragment
        android:id="@+id/navigation_textanimation"
        android:name="dev.autom8ed.rgbsunglasses.ui.animations.TextAnimationFragment"
        android:label="@string/title_textanimation"
        tools:layout="@layout/fragment_textanimation" />

    <fragment
        android:id="@+id/navigation_rainbowanimation"
        android:name="dev.autom8ed.rgbsunglasses.ui.animations.RainbowAnimationFragment"
        android:label="@string/title_rainbowanimation"
        tools:layout="@layout/fragment_rainbowanimation" />
</navigation>